# wine

./: pyproject.toml  requirements.txt  utils.py
catboost_info/: time_left.tsv
wine/fw_streamlit/: pyproject.toml
wine/fw_streamlit/fw_streamlit/: uber_pickups.py
wine/fw_streamlit/fw_streamlit/hello/pages/: 2_🌍_Mapping_Demo.py
wine/ml_wine/: pyproject.toml  requirements.txt
wine/ml_wine/ml_wine/catboost_info/: catboost_training.json  learn_error.tsv
wine/ml_wine/ml_wine/catboost_info/learn/: events.out.tfevents
wine/ml_wine/ml_wine/models/: wine_quality_prediction.joblib
wine/ml_wine/ml_wine/stwine/: Home.py
wine/ml_wine/ml_wine/stwine/pages/: 1_📈_Overview.py
