[project]
name = "wine"
version = "0.0.1"
description = "WINE: \"Wisdom In Nurturing Experiments\". This aligns with the idea of learning gradually and seeing progress over time. It emphasizes the growth of knowledge through small, consistent experiments and practice."
dependencies = [
    "ipykernel==6.29.5",
    "jupyter==1.1.1",
    "nbformat==5.10.4",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"