[project]
name = "ml_wine"
version = "0.0.1"
description = "Machine Learning pipeline deployment using Wine Quality dataset."
dependencies = [
    "catboost==1.2.6",
    "ipykernel==6.29.5",
    "joblib==1.4.2",
    "jupyter==1.1.1",
    "lightgbm==4.5.0",
    "nbformat==5.10.4",
    "numpy==1.26.4",
    "optuna==4.0.0",
    "pandas==2.2.2",
    "plotly==5.24.0",
    "scikit-learn==1.5.1",
    "scipy==1.14.1",
    "xgboost==2.1.1",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"